-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs15
-
Component/s: hotspot
-
b01
-
generic
-
solaris
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2206389 | 7 | Tom Rodriguez | P3 | Closed | Fixed | b129 |
hotspot:::method_entry probes are not correctly generated for "method()V" with "-client -Xcomp".
The are generated correctly for all other methods:
method()V
methodStatic()V
methodException()V
methodStaticException()V
methodNative()V
methodStaticNative()V
methodExceptionNative(Ljava/lang/Class;)V
methodStaticExceptionNative(Ljava/lang/Class;)V
The probes are also generated correctly in case JVMTI MethodEntry event is enabled.
Looks like some optimizations broke dtrace stuff.
The are generated correctly for all other methods:
method()V
methodStatic()V
methodException()V
methodStaticException()V
methodNative()V
methodStaticNative()V
methodExceptionNative(Ljava/lang/Class;)V
methodStaticExceptionNative(Ljava/lang/Class;)V
The probes are also generated correctly in case JVMTI MethodEntry event is enabled.
Looks like some optimizations broke dtrace stuff.
- backported by
-
JDK-2206389 hotspot:::method_entry are not correctly generated for "method()V"
-
- Closed
-
- relates to
-
JDK-7021603 crash in fill_sync_handler with ExtendedDTrace probes
-
- Closed
-