6809483: hotspot:::method_entry are not correctly generated for "method()V"

Reviewed-by: iveresov, twisti